--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,11 +15,11 @@ install:
 nuget:
   project_feed: true
 build_script:
-- cmd: dotnet build Confused -c Release
+- cmd: >-
+    dotnet build Confused -c Release
+    dotnet pack Confused -c Release
 test_script:
 - cmd: dotnet test Confused.Tests/Confused.Tests.csproj
-before_deploy:
-- cmd: dotnet pack Confused -c Release
 deploy:
   - provider: Environment
     name: Confused NuGet
